--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Jekyll URL Shortener
+title: GO - programming.my.id
 description: ✂️🔗 This is a template repository for making URL Shorteners with Jekyll and GitHub Pages. Create short URLs that can be easily shared, tweeted, or emailed to friends. Fork this repo to get started.
 logo: /assets/img/logo.png
 show_downloads: true
