--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,8 @@
 title: GO - programming.my.id
-description: ✂️🔗 This is a template repository for making URL Shorteners with Jekyll and GitHub Pages. Create short URLs that can be easily shared, tweeted, or emailed to friends. Fork this repo to get started.
-logo: /assets/img/logo.png
-show_downloads: true
-google_analytics:
+description: Go For programming.my.id
 theme: jekyll-theme-minimal
 
 permalink: /:slug/
 
 plugins:
   - jekyll-redirect-from
-
-#repository: hlaueriksson/jekyll-url-shortener
