--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,12 @@
 title: GO !
-description: Go For programming.my.id
+description: ✂️🔗 This is a template repository for making URL Shorteners with Jekyll and GitHub Pages. Create short URLs that can be easily shared, tweeted, or emailed to friends. Fork this repo to get started.
+logo: /assets/img/logo.png
+show_downloads: false
 theme: jekyll-theme-minimal
 
 permalink: /:slug/
 
 plugins:
   - jekyll-redirect-from
+
+#repository: hlaueriksson/jekyll-url-shortener
