--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: GO !
-description: ✂️🔗 This is a template repository for making URL Shorteners with Jekyll and GitHub Pages. Create short URLs that can be easily shared, tweeted, or emailed to friends. Fork this repo to get started.
+title: GO-!
+description: Subdomain ini merupakan subdomain yang digunakan sebagai alamat url pendek untuk redirect ke halaman tertentu yang digunakan di programming.my.id.
 logo: /assets/img/logo.png
 show_downloads: false
 theme: jekyll-theme-minimal
